[package]
name = "btc_hunt"
version = "2.1.0"
edition = "2021"
authors = ["Jafar Ekrami <ekrami@gmail.com>"]
description = "Unified Bitcoin address hunter: generates BIP39 mnemonics, derives addresses, and searches database"
license = "MIT"
keywords = ["bip39", "bitcoin", "crypto", "wallet"]
categories = ["cryptography", "command-line-utilities"]

[[bin]]
name = "btc_hunt"
path = "src/main.rs"

[[bin]]
name = "verify_mnemonic"
path = "src/bin/verify_mnemonic.rs"

[[bin]]
name = "daily_report"
path = "src/bin/daily_report.rs"

[dependencies]
# BIP39 and Bitcoin
bip39 = "2.0.0"
bitcoin = "0.30.0"
rand = "0.8.5"
sha2 = "0.10.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI and utilities
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"

# Performance
rayon = "1.11.0"

# Security
zeroize = { version = "1.5", features = ["zeroize_derive"] }

# Utilities
lazy_static = "1.4.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

